[package]
name = "mergeTest"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "1.4.3", features = ["boolean", "shortint", "integer"] }
# Parallel Processing
rayon = "1.10"

# Random Data Generation (Zipfian)
rand = "0.8"
rand_distr = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"